Regex compilation and matching (#20)
* v1

* pkg json

* splti filtering for testing

* simplify dir read

* remove tsc??

* go back to tsc

* print test files

* values

* try to call values in then

* just hard code it

* transform the string

* whoops

* strict equal

* remvoe dist from non release branches!

* add regex escape

* simplify regexes

* fix lock regex

* add ability to omit regexes and target all

* add this to DiffCache

* offer disabling the escape

* BooleanInput -> Input

* diff args i ntests

* adjust post

* remvoe unnedded steps

* Add info to Readme

Co-authored-by: kamil.rybacki <kamil.rybacki@pg.edu.pl>

--- a/action.yml
+++ b/action.yml
@@ -5,18 +5,22 @@ branding:
   icon: 'eye'
   color: 'green'
 inputs:
-  include:
-    description: 'Regex to use to match the files to include.'
-    required: true
   cache_secret:
     description: 'Secret containing the cache.'
     required: true
   token:
     description: 'Github token to use for the API calls.'
     required: true
-  exclude:
-    description: 'Regex to use to match the files to ignore.'
+  include:
+    description: 'Regex to use to match the files to include. If left empty - all changed files will be included.'
     required: false
+  exclude:
+    description: 'Regex to use to match the files to ignore. If left empty - no files will be ignored.'
+    required: false
+  disable_escaping:
+    description: 'Set to true if You want to provide manually escaped regexps i.e. turn off manual escape of special characters.'
+    required: false
+    default: 'false'
 outputs:
   files:
     description: 'List of changed files kept as GH Workflow output for convenience.'
